--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 /node_modules
-/public/storage
 /public/hot
+/public/storage
 /storage/*.key
 /vendor
 /.idea
-/public/video
+/.vagrant
 Homestead.json
 Homestead.yaml
+npm-debug.log
+yarn-error.log
 .env
