--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0"
+    },
+    "dependencies": {
+        "next": "^10.0.0",
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1"
     }
 }
