--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,15 @@
-APP_NAME=Laravel
+APP_NAME=PortalSirs
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+
 
 LOG_CHANNEL=stack
+
+PROXY_RESERVE=true/false
+APP_URL=
+ASSEST_URL=
+SIRSPRO=
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
